Fixed the spacing of the project blocks.

--- a/client/src/stylesheets/Projects.css
+++ b/client/src/stylesheets/Projects.css
@@ -6,19 +6,19 @@
   flex-direction: column;
 }
 
+.project-block-layout{
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap-reverse;
+}
+
 .project-block {
-  margin: 0px auto 5px;
+  margin: 0px auto 20px;
   padding-bottom: 10px;
   width: 375px;
   overflow-wrap: break-word;
 
   border: 3px solid #000;
-}
-
-.project-block-layout{
-  display: flex;
-  flex-direction: row-reverse;
-  flex-wrap: wrap-reverse;
 }
 
 .thumbnail {
